Fixed coloring in dark mode

--- a/css/master.css
+++ b/css/master.css
@@ -109,6 +109,7 @@ a {
 }
 
 .project_heading {
+  color: var(--theme-text);
   margin-left: 10vw;
 }
 
